sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:7: error: not found: value a
    a = trouveBaseJoueur(i,nbrB)._1
    ^SelectBaseball:28: error: not found: value pos
  pos = getHolePosition();
  ^SelectBaseball:29: error: not found: value pos
  for (i<-pos to base-1){
          ^